--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
 
     
+    
+    <script src="./assets/js/app.js"></script>
     <script src="https://kit.fontawesome.com/b280d23429.js" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
 </body>
 </html>
