--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to css file -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Todo List</title>
+    
+<title>Todo List</title>
 </head>
 <body>
 <header>
     <h1>Thomas Todo List</h1>
 </header>
+
+    <!-- Text creation of the todo inputs -->
     <form>
         <input type="text" class="todo-input">
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
+
+        <!-- Options of all, completed and uncompleted -->
         <div class="select">
             <select name="todos" class="filter-todo">
                 <option value="all">All</option>
@@ -30,7 +39,9 @@
         <ul class="todo-list"></ul>
     </div>
 
+    <!-- Javascript link to file -->
     <script src="./assets/js/app.js"></script>
+    <!-- Fontawesome kit -->
     <script src="https://kit.fontawesome.com/b280d23429.js" crossorigin="anonymous"></script>
 </body>
 </html>
