added more readme info

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <ul class="todo-list"></ul>
     </div>
 
+    <!-- timer -->
     <div id="container">
         <div id="display">
             00:00:00:00
