cleaning up the project and changing design

--- a/index.html
+++ b/index.html
@@ -15,9 +15,25 @@
 <title>Task Manager</title>
 </head>
 <body>
+
 <header>
     <h1>Thomas Task Manager</h1>
 </header>
+
+<!-- clock -->
+<div id="clock-container">
+    <div class="clock">
+        <div id="Date">Sunday 20 October 2024</div>
+        
+        <ul>
+            <li id="hours">15</li>
+            <li id="point">:</li>
+            <li id="min">43</li>
+            <li id="point">:</li>
+            <li id="sec">30</li>
+        </ul>
+    </div>
+    </div>
 
     <!-- Text creation of the todo inputs -->
     <form>
