added more readme

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         
         <ul>
             <li id="hours">15</li>
-            <li id="point">:</li>
+            <li class="point">:</li>
             <li id="min">43</li>
-            <li id="point">:</li>
+            <li class="point">:</li>
             <li id="sec">30</li>
         </ul>
     </div>
