sorted out js errors in js hint

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 <!-- clock -->
 <div id="clock-container">
     <div class="clock">
-        <div id="Date">Sunday 20 October 2024</div>
+        <div id="Date"></div>
         
         <ul>
-            <li id="hours">15</li>
+            <li id="hours"></li>
             <li class="point">:</li>
-            <li id="min">43</li>
+            <li id="min"></li>
             <li class="point">:</li>
-            <li id="sec">30</li>
+            <li id="sec"></li>
         </ul>
     </div>
     </div>
